[package]
name = "janus"
version = "0.2.0"
edition = "2021"
authors = ["fergus.finn@doubleword.ai"]
description = "Database connection pool routing for primary/replica separation - two-faced like the Roman god"
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublewordai/janus"
keywords = ["database", "postgres", "pool", "replica", "routing"]
categories = ["database", "asynchronous"]
readme = "README.md"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["postgres"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
sqlx = { version = "0.8", features = ["postgres", "macros", "runtime-tokio"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
