[package]
name = "sqlx-pool-router"
version = "0.3.0"
edition = "2021"
authors = ["fergus.finn@doubleword.ai"]
description = "Lightweight SQLx PostgreSQL connection pool routing for primary/replica separation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublewordai/sqlx-pool-router"
keywords = ["database", "postgres", "pool", "replica", "routing"]
categories = ["database", "asynchronous"]
readme = "README.md"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["postgres"] }
sqlx-tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
sqlx = { version = "0.8", features = ["postgres", "macros", "runtime-tokio"] }

[features]
default = []
sqlx-tracing = ["dep:sqlx-tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
